# sdkwork-xiangqi

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json
.github/workflows/: package.yml
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/game/: xiangqi-app-api.openapi.json
apis/backend-api/game/: xiangqi-backend-api.openapi.json
apps/: README.md
apps/sdkwork-xiangqi-common/: README.md
apps/sdkwork-xiangqi-pc/: .env.example  README.md  all_t.txt  keys.txt  metadata.json  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-xiangqi-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-xiangqi-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-xiangqi-pc/specs/: dependency.composition.json
apps/sdkwork-xiangqi-pc/src/: App.tsx  index.css  main.tsx
configs/: README.md  sdkwork-api-cloud-gateway.xiangqi.development.toml  sdkwork-api-cloud-gateway.xiangqi.production.toml  xiangqi.database.example.toml
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.split-services.development.env
crates/: README.md
crates/sdkwork-api-xiangqi-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-api-xiangqi-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-xiangqi-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-xiangqi-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-api-xiangqi-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-api-xiangqi-standalone-gateway/tests/: bootstrap.rs  match_web_framework.rs
crates/sdkwork-game-match-repository-sqlx/src/: lib.rs  memory.rs  sqlx.rs
crates/sdkwork-router-health-app-api/: Cargo.toml
crates/sdkwork-router-health-app-api/src/: routes.rs
crates/sdkwork-router-match-app-api/: Cargo.toml
crates/sdkwork-router-match-app-api/src/: error.rs  paths.rs
crates/sdkwork-router-match-backend-api/: Cargo.toml
crates/sdkwork-router-match-backend-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-health-app-api/: Cargo.toml
crates/sdkwork-routes-health-app-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-match-app-api/: Cargo.toml
crates/sdkwork-routes-match-app-api/specs/: component.spec.json
crates/sdkwork-routes-match-app-api/src/: error.rs  lib.rs  routes.rs
crates/sdkwork-routes-match-backend-api/: Cargo.toml
crates/sdkwork-routes-match-backend-api/src/: paths.rs  routes.rs
crates/sdkwork-routes-xiangqi-app-api/: Cargo.toml
crates/sdkwork-routes-xiangqi-app-api/specs/: component.spec.json
crates/sdkwork-routes-xiangqi-app-api/src/: error.rs  routes.rs
crates/sdkwork-routes-xiangqi-backend-api/: Cargo.toml
crates/sdkwork-routes-xiangqi-backend-api/specs/: component.spec.json
crates/sdkwork-routes-xiangqi-backend-api/src/: routes.rs
crates/sdkwork-xiangqi-api-server/: Cargo.toml  build.rs
crates/sdkwork-xiangqi-api-server/src/: bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-xiangqi-api-server/tests/: bootstrap.rs  match_web_framework.rs
crates/sdkwork-xiangqi-database-host/: Cargo.toml
crates/sdkwork-xiangqi-database-host/src/: lib.rs
crates/sdkwork-xiangqi-gateway-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-xiangqi-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-xiangqi-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-xiangqi-match-repository-sqlx/: Cargo.toml
crates/sdkwork-xiangqi-match-repository-sqlx/src/: kind.rs  memory.rs  sqlx.rs
crates/sdkwork-xiangqi-match-service/: Cargo.toml
crates/sdkwork-xiangqi-match-service/src/: lib.rs
crates/sdkwork-xiangqi-match-service/src/ports/: repository.rs
crates/sdkwork-xiangqi-match-service/src/service/: mod.rs
crates/sdkwork-xiangqi-service-host/: Cargo.toml
crates/sdkwork-xiangqi-service-host/specs/: README.md  component.spec.json
crates/sdkwork-xiangqi-service-host/src/: lib.rs
crates/sdkwork-xiangqi-standalone-gateway/: Cargo.toml
crates/sdkwork-xiangqi-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-xiangqi-standalone-gateway/tests/: bootstrap.rs  match_web_framework.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
database/fixtures/: README.md
database/migrations/postgres/: 0001_xiangqi_baseline.down.sql  0001_xiangqi_baseline.up.sql  README.md
database/migrations/sqlite/: 0001_xiangqi_baseline.up.sql  README.md
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql  README.md
database/seeds/locales/: README.md
deployments/: README.md
deployments/docker/: Dockerfile.xiangqi-api
deployments/templates/: server.env.example
docs/: INDEX.yaml  README.md
etc/: sdkwork-api-cloud-gateway.xiangqi.development.toml  sdkwork-api-cloud-gateway.xiangqi.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  generate-xiangqi-sdk.mjs  sdkwork-command.mjs  sdkwork-verify.mjs  xiangqi-pc-package-naming.test.mjs  xiangqi-workspace-boundary.test.mjs
scripts/gateway/: assembly-materialize.mjs  assembly-validate.mjs
sdks/: README.md
sdks/sdkwork-xiangqi-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-xiangqi-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tests/contract/: database-framework.contract.test.mjs
tools/: README.md  materialize_xiangqi_database_contract.mjs  xiangqi_openapi_export.mjs  xiangqi_route_manifest_check.mjs  xiangqi_sdk_generate.mjs
(+28 files in other folders)
