[workspace]
resolver = "2"
members = [
    "crates/sdkwork-xiangqi-api-server",
    "crates/sdkwork-xiangqi-database-host",
    "crates/sdkwork-game-match-service",
    "crates/sdkwork-game-match-repository-sqlx",
    "crates/sdkwork-router-health-app-api",
    "crates/sdkwork-router-match-app-api",
    "crates/sdkwork-router-match-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork_xiangqi_api_server = { package = "sdkwork-xiangqi-api-server", path = "crates/sdkwork-xiangqi-api-server" }
sdkwork_xiangqi_database_host = { package = "sdkwork-xiangqi-database-host", path = "crates/sdkwork-xiangqi-database-host" }
sdkwork_game_match_service = { package = "sdkwork-game-match-service", path = "crates/sdkwork-game-match-service" }
sdkwork_game_match_repository_sqlx = { package = "sdkwork-game-match-repository-sqlx", path = "crates/sdkwork-game-match-repository-sqlx" }
sdkwork_router_health_app_api = { package = "sdkwork-router-health-app-api", path = "crates/sdkwork-router-health-app-api" }
sdkwork_router_match_app_api = { package = "sdkwork-router-match-app-api", path = "crates/sdkwork-router-match-app-api" }
sdkwork_router_match_backend_api = { package = "sdkwork-router-match-backend-api", path = "crates/sdkwork-router-match-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
