[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-xiangqi-assembly",
    "crates/sdkwork-api-xiangqi-assembly",
    "crates/sdkwork-api-xiangqi-standalone-gateway",
    "crates/sdkwork-xiangqi-service-host",
    "crates/sdkwork-xiangqi-database-host",
    "crates/sdkwork-xiangqi-match-service",
    "crates/sdkwork-xiangqi-match-repository-sqlx",
    "crates/sdkwork-routes-xiangqi-app-api",
    "crates/sdkwork-routes-xiangqi-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork_api_xiangqi_standalone_gateway = { package = "sdkwork-api-xiangqi-standalone-gateway", path = "crates/sdkwork-api-xiangqi-standalone-gateway" }
sdkwork_api_xiangqi_assembly = { package = "sdkwork-api-xiangqi-assembly", path = "crates/sdkwork-api-xiangqi-assembly" }
sdkwork_xiangqi_service_host = { package = "sdkwork-xiangqi-service-host", path = "crates/sdkwork-xiangqi-service-host" }
sdkwork_xiangqi_database_host = { package = "sdkwork-xiangqi-database-host", path = "crates/sdkwork-xiangqi-database-host" }
sdkwork_xiangqi_match_service = { package = "sdkwork-xiangqi-match-service", path = "crates/sdkwork-xiangqi-match-service" }
sdkwork_xiangqi_match_repository_sqlx = { package = "sdkwork-xiangqi-match-repository-sqlx", path = "crates/sdkwork-xiangqi-match-repository-sqlx" }
sdkwork_routes_xiangqi_app_api = { package = "sdkwork-routes-xiangqi-app-api", path = "crates/sdkwork-routes-xiangqi-app-api" }
sdkwork_routes_xiangqi_backend_api = { package = "sdkwork-routes-xiangqi-backend-api", path = "crates/sdkwork-routes-xiangqi-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
