[package]
name = "sdkwork-api-xiangqi-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-xiangqi application HTTP plane."

[lib]
name = "sdkwork_api_xiangqi_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-match-app-api = { path = "../sdkwork-routes-match-app-api" }
sdkwork-routes-match-backend-api = { path = "../sdkwork-routes-match-backend-api" }
