[package]
name = "sdkwork-api-xiangqi-standalone-gateway"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Xiangqi HTTP API server with sdkwork-web-framework integration."

[lib]
path = "src/lib.rs"


[[bin]]
name = "sdkwork-api-xiangqi-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_api_xiangqi_assembly.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-utils-rust.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
sdkwork_routes_xiangqi_app_api.workspace = true
sdkwork-web-core.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
