[package]
name = "sdkwork-router-match-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Xiangqi match app-api router."

[lib]
name = "sdkwork_router_match_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_game_match_service.workspace = true
sdkwork-web-axum.workspace = true
