[package]
name = "sdkwork-routes-health-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Xiangqi health app-api router."

[lib]
name = "sdkwork_routes_health_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde_json.workspace = true
sdkwork-web-core.workspace = true
