[package]
name = "sdkwork-routes-xiangqi-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Xiangqi match app-api router."

[lib]
name = "sdkwork_routes_xiangqi_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_xiangqi_match_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
