[package]
name = "sdkwork-xiangqi-database-host"
version.workspace = true
edition.workspace = true
description = "SDKWork Xiangqi database lifecycle bootstrap."

[lib]
name = "sdkwork_xiangqi_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
