[package]
name = "sdkwork-xiangqi-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-xiangqi application HTTP plane."

[lib]
name = "sdkwork_xiangqi_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-xiangqi-standalone-gateway = { path = "../sdkwork-xiangqi-standalone-gateway" }
sdkwork-routes-match-app-api = { path = "../sdkwork-routes-match-app-api" }
sdkwork-routes-match-backend-api = { path = "../sdkwork-routes-match-backend-api" }
