[package]
name = "sdkwork-game-match-service"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork game catalog domain service."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
sdkwork-utils-rust.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tokio.workspace = true
